# replace-megaparsec

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  flake.nix  parse-replace.cabal  replace-megaparsec.cabal
.github/workflows/: ci.yaml  publish.yaml
Parsereplace/: Megaparsec.hs
bench/: BenchByteString.hs  BenchString.hs  BenchText.hs  BenchUnit.hs  run.sh
notebook/: ReplaceMegaparsecUsage.ipynb  stack.yaml
src/: Parsereplace.hs
src/Replace/: Megaparsec.hs
src/Replace/Megaparsec/Internal/: ByteString.hs  Text.hs
tests/: Test.hs  TestByteString.hs  TestString.hs  TestText.hs  Tests.hs
