name:                parse-replace
version:             1.0.0.0
cabal-version:       1.18
synopsis:            Stream editing with parsers
homepage:            https://github.com/jamesdbrock/parse-replace
bug-reports:         https://github.com/jamesdbrock/parse-replace/issues
license:             BSD3
license-file:        LICENSE
author:              James Brock
maintainer:          jamesbrock@gmail.com
build-type:          Simple
category:            Parsing
description:

  Stream editing and find-and-replace with Megaparsec monadic parser
  combinators.

extra-doc-files:     README.md
                   , CHANGELOG.md

source-repository head
  type:               git
  location:           https://github.com/jamesdbrock/parse-replace.git

library
  hs-source-dirs:      src
  -- rely on megaparsec for version bounds
  build-depends:       base
                     , megaparsec
  default-language:    Haskell2010
  exposed-modules:     Parsereplace

test-suite test-string
  type: detailed-0.9
  test-module: TestString
  hs-source-dirs: tests
  default-language:    Haskell2010
  build-depends:       base >=4.12 && < 5.0
                     , parse-replace
                     , megaparsec
                     , Cabal

test-suite test-text
  type: detailed-0.9
  test-module: TestText
  hs-source-dirs: tests
  default-language:    Haskell2010
  build-depends:       base >=4.12 && < 5.0
                     , parse-replace
                     , megaparsec
                     , Cabal
                     , text

test-suite test-bytestring
  type: detailed-0.9
  test-module: TestByteString
  hs-source-dirs: tests
  default-language:    Haskell2010
  build-depends:       base >=4.12 && < 5.0
                     , parse-replace
                     , megaparsec
                     , Cabal
                     , bytestring
