name:                replace-megaparsec
version:             1.2.0.0
cabal-version:       1.18
synopsis:            Find, replace, and edit text patterns with Megaparsec parsers
homepage:            https://github.com/jamesdbrock/replace-megaparsec
bug-reports:         https://github.com/jamesdbrock/replace-megaparsec/issues
license:             BSD2
license-file:        LICENSE
author:              James Brock <jamesbrock@gmail.com>
maintainer:          James Brock <jamesbrock@gmail.com>
build-type:          Simple
category:            Parsing
description:

  Find text patterns, and also edit or replace the found patterns. Use
  Megaparsec monadic parsers instead of regular expressions for pattern matching.

extra-doc-files:     README.md
                   , CHANGELOG.md

source-repository head
  type:               git
  location:           https://github.com/jamesdbrock/replace-megaparsec.git

library
  hs-source-dirs:      src
  build-depends:       base >= 4.0 && < 5.0
                     , megaparsec
                     , bytestring
                     , text
  default-language:    Haskell2010
  exposed-modules:     Replace.Megaparsec
                     , Replace.Megaparsec.Internal.ByteString
                     , Replace.Megaparsec.Internal.Text
  ghc-options:         -O2 -Wall

test-suite test-string
  type:                detailed-0.9
  test-module:         TestString
  hs-source-dirs:      tests
  default-language:    Haskell2010
  build-depends:       base >= 4.0 && < 5.0
                     , replace-megaparsec
                     , megaparsec
                     , Cabal
  ghc-options:         -Wall

test-suite test-text
  type:                detailed-0.9
  test-module:         TestText
  hs-source-dirs:      tests
  default-language:    Haskell2010
  build-depends:       base >= 4.0 && < 5.0
                     , replace-megaparsec
                     , megaparsec
                     , Cabal
                     , text
  ghc-options:         -Wall

test-suite test-bytestring
  type:                detailed-0.9
  test-module:         TestByteString
  hs-source-dirs:      tests
  default-language:    Haskell2010
  build-depends:       base >= 4.0 && < 5.0
                     , replace-megaparsec
                     , megaparsec
                     , Cabal
                     , bytestring
  ghc-options:         -Wall

