cabal-version:       3.0
name:                replace-megaparsec
version:             1.5.0.1
synopsis:            Find, replace, split string patterns with Megaparsec parsers (instead of regex)
homepage:            https://github.com/jamesdbrock/replace-megaparsec
bug-reports:         https://github.com/jamesdbrock/replace-megaparsec/issues
license:             BSD-2-Clause
license-file:        LICENSE
author:              James Brock <jamesbrock@gmail.com>
maintainer:          James Brock <jamesbrock@gmail.com>
build-type:          Simple
category:            Parsing
description:

  Find text patterns, replace the patterns, split on the patterns. Use
  Megaparsec monadic parsers instead of regular expressions for pattern matching.

extra-doc-files:     README.md
                   , CHANGELOG.md

source-repository head
  type:               git
  location:           https://github.com/jamesdbrock/replace-megaparsec.git

library
  hs-source-dirs:      src
  build-depends:       base >=4.0 && <5.0
                     , megaparsec >=7.0.0 && <10.0.0
                     , bytestring >=0.2 && <1.0
                     , text >=0.2 && <3.0
                     , parser-combinators >=1.2.0 && < 2.0.0
  default-language:    Haskell2010
  exposed-modules:     Replace.Megaparsec
                     , Replace.Megaparsec.Internal.ByteString
                     , Replace.Megaparsec.Internal.Text

test-suite test
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      tests
  other-modules:       TestString, TestByteString, TestText
  default-language:    Haskell2010
  build-depends:       base
                     , replace-megaparsec
                     , megaparsec
                     , hspec >=2.0.0 && <3.0.0
                     , text
                     , bytestring
